--- a/public-info/src/main/resources/application-local.yaml
+++ b/public-info/src/main/resources/application-local.yaml
@@ -12,9 +12,16 @@ management:
     web:
       exposure:
         include: '*'
+        metrics:
+          export:
+            prometheus:
+              enabled: true
+          distribution:
+            percentiles-histogram:
+              "[http.server.requests]": true
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/postgres
+    url: jdbc:postgresql://localhost:5433/postgres?currentSchema="public_bank_information"
     username: postgres
     password: password
   liquibase:
